--- a/src/Adstacy/UserBundle/Resources/translations/FOSUserBundle.en.yml
+++ b/src/Adstacy/UserBundle/Resources/translations/FOSUserBundle.en.yml
@@ -20,6 +20,7 @@ security:
         password: "Password:"
         remember_me: Remember me
         submit: Login
+        failed: "Invalid username/email or password"
 
 # Profile
 profile:
