--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -6,7 +6,7 @@ logout: Logout
 login: Login
 login.with: Login With
 register: Register new account
-password.forgot: Forgot password?
+forgot_password: Forgot password?
 cancel: Cancel
 delete: Delete
 edit: Edit
@@ -39,3 +39,37 @@ search:
     no_result:
         message: No Results Found
         help: Please try a different keywords
+
+form_registration:
+    agreement: By clicking register, you agree to your <a href="%terms_url%">Terms of Service</a> and <a href="%privacy_url%">Privacy Policy</a>
+    fullname: Fullname
+    submit: Register
+    title: Register
+
+form_profile:
+    profile_picture: Profile picture
+    fullname: Fullname
+    about_me: About me
+    submit: Save
+    change_password: change password
+    forgot_password: forgot your password?
+    connected: Connected to %name%
+    not_connected: Not Connected
+    connect: Connect with %service%
+    disconnect: Disconnect %service% Account
+
+form_ad:
+    image: Image
+    description: Description
+    content: Content
+    submit: Save
+
+form_contact:
+    subject: Subject
+    email: Email
+    content: Content
+    submit: Submit
+
+form_password:
+    submit: Change Password
+    title: Change Password
