--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -61,7 +61,7 @@ form_profile:
 form_ad:
     image: Image
     description: Description
-    content: Content
+    content: Long description
     submit: Save
 
 form_contact:
