Redesign page top bar layout.

--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -13,10 +13,10 @@ edit: Edit
 more: More
 
 #footer
-about: about
-terms: terms
-privacy: privacy policy
-contact_us: contact us
+about: About
+terms: Terms
+privacy: Privacy Policy
+contact_us: Contact Us
 
 #ads
 ads:
