--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -33,7 +33,7 @@ user:
     no_followers:
         message: %username% don't have any followers yet
     no_followings:
-        message: Nobody follows %username% yet.
+        message: Nobody follows %username% yet
 
 search:
     no_result:
