--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -26,12 +26,14 @@ ads:
         confirm_message: Are you sure you want to delete this ads?
         button: DELETE!
     no_ads:
-        message: %username% don't have any ads yet
+        message: %username% doesn't have any ads yet
+        self_message: You don't have any ads yet
         help: Create an ads now
 
 user:
     no_followers:
-        message: %username% don't have any followers yet
+        message: %username% doesn't have any followers yet
+        self_message: You don't have any ads yet
     no_followings:
         message: Nobody follows %username% yet
 
