--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -13,3 +13,18 @@ landing:
         search:
             heading: Temukan Apapun Kebutuhan Anda
             desc: Temukan semua jenis iklan disini. Promosi, Jual Beli, Event, hingga Lowongan Kerja. Apapun itu.
+
+form_ad:
+    image: Gambar
+    description: Deskripsi
+    content: Deskripsi lengkap
+    submit: Simpan
+    placeholders:
+        description: Deskripsikan iklan anda secara kreatif sesuai target pasar anda. Lihat contoh untuk referensi.
+    example: contoh
+    examples:
+        example1: "Rp250.000 #tshirt #brand #jual #medan #pria #indonesia"
+        example2: "Launching #adstacy 9 September 2013 #event #launching"
+        example3: "Lowongan administrasi PT.XXX #lowongankerja minimal #s1"
+        example4: "#cucigudang #diskon 50% semua barang"
+        example5: "#rumah 4x18m wilayah #medan #marelan Rp250.000.000 NEGO"
