Add disable button when submitting.

--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -12,6 +12,9 @@ close: Close
 delete: Delete
 edit: Edit
 more: More
+saving: Saving...
+registering: Registering...
+loggingin: Loggin in...
 
 #footer
 about: About
