--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -16,6 +16,9 @@ saving: Saving...
 registering: Registering...
 loggingin: Logging in...
 
+users: Users
+ads: Ads
+
 #footer
 about: About
 terms: Terms
