--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -17,6 +17,9 @@ saving: Menyimpan...
 registering: Mendaftarkan...
 loggingin: Logging in...
 
+users: User
+ads: Iklan
+
 #footer
 about: Tentang
 terms: Ketentuan
