Add translations for characters left.

--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -77,6 +77,7 @@ form_ad:
     submit: Save
     placeholders:
         description: Describe your ads creatively to reach your potential market. See examples for reference.
+    characters_left: '<span id="chars-left">%left%</span> characters left'
     example: examples
     examples:
         example1: "Rp250.000 #tshirt #brand #jual #medan #pria #indonesia"
