--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -71,6 +71,7 @@ form_ad:
     submit: Simpan
     placeholders:
         description: Deskripsikan iklan anda secara kreatif sesuai target pasar anda. Lihat contoh untuk referensi.
+    characters_left: 'sisa <span id="chars-left">%left%</span> karakter'
     example: contoh
     examples:
         example1: "Rp250.000 #tshirt #brand #jual #medan #pria #indonesia"
