Change landing page design.

--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -137,16 +137,16 @@ landing:
             desc: Just with an image and short description, your ad is ready to go
         social:
             heading: <b>S</b>ocial &amp; <b>F</b>un
-            desc: Promote any ads you like to share it to your followers
+            desc: Promote any ads you like to share it with your followers
         search:
             heading: <b>S</b>earch
             desc: Find any products, events, jobs, vacancies and many more stuffs
         hashtag:
             heading: <b>H</b>ashtag
-            desc: Creatively describe your ad with hashtag to reach your potential market
+            desc: Creatively describe your ad with hashtags to reach your potential market
         free:
             heading: <b>F</b>ree
             desc: Pay nothing to promote your ad with us
         fast:
             heading: <b>F</b>ast
-            desc: Fast as you want
+            desc: Our promote and follow features will help your ads spread faster
