--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -141,5 +141,5 @@ landing:
             heading: <b>G</b>ratis
             desc: Iklan di tempat kami GRATIS
         fast:
-            heading: <b>F</b>ast
-            desc: Fast as you want
+            heading: <b>C</b>epat
+            desc: Dengan adanya fitur promote dan follow, iklan Anda akan tersebar lebih cepat
