--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -16,6 +16,7 @@ more: More
 saving: Saving...
 registering: Registering...
 loggingin: Logging in...
+promoted_by: Also promoted by
 
 users: Users
 ads: Ads
