--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -16,6 +16,7 @@ more: Lagi
 saving: Menyimpan...
 registering: Mendaftarkan...
 loggingin: Logging in...
+promoted_by: Juga dipromote oleh
 
 users: User
 ads: Iklan
