--- a/src/Adstacy/UserBundle/Resources/translations/FOSUserBundle.en.yml
+++ b/src/Adstacy/UserBundle/Resources/translations/FOSUserBundle.en.yml
@@ -92,6 +92,6 @@ form:
     email: "Email"
     current_password: "Current password"
     password: "Password"
-    password_confirmation: "Verification"
+    password_confirmation: "Re-enter password"
     new_password: "New password"
-    new_password_confirmation: "Verification"
+    new_password_confirmation: "Re-enter password"
