--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -26,6 +26,7 @@ about: About
 terms: Terms
 privacy: Privacy Policy
 contact_us: Contact Us
+beta_info: We are currently on Beta. Feel free to contact us if you have any suggestions or questions <a href="%url%">here</a>
 
 #ads
 ads:
