--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -26,6 +26,7 @@ about: Tentang
 terms: Ketentuan
 privacy: Kebijakan Privasi
 contact_us: Contact Us
+beta_info: Adstacy sedang dalam Beta. Kontak kami <a href="%url">disini</a> jika Anda mempunyai kritik, saran ataupun pertanyaan
 
 ads:
     create: Tambah iklan
