Fix translations in search dropdown.

--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -18,8 +18,8 @@ registering: Registering...
 loggingin: Logging in...
 promoted_by: Also promoted by
 
-users: Users
-ads: Ads
+search_users: Users
+search_ads: Ads
 
 #footer
 about: About
