--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -18,8 +18,8 @@ registering: Mendaftarkan...
 loggingin: Logging in...
 promoted_by: Juga dipromote oleh
 
-users: User
-ads: Iklan
+search_users: User
+search_ads: Iklan
 
 #footer
 about: Tentang
