--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -159,7 +159,7 @@ landing:
             desc: Get your ads promoted to reach the Trending page
         stream:
             heading: <b>M</b>y <b>S</b>tream
-            desc: Keep up-to-date with your followings activity
+            desc: Get activity updates from people you follow
         explore:
             heading: <b>E</b>xplore
             desc: Find latest ads from anyone, anywhere
