--- a/src/Adstacy/NotificationBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/NotificationBundle/Resources/translations/messages.en.yml
@@ -1,1 +1,5 @@
-notification.comment: '<a class="notification" href="%url_comment%"><a href="%url_user%">%user_from%</a> has commented on your ad: %comment%</a>'
+notification:
+    comment: '<div class="notification" data-href="%url_ad%"><a href="%url_user%">%user_from%</a> has commented on your ad: %comment%</div>'
+    mention: '<div class="notification" data-href="%url_ad%"><a href="%url_user%">%user_from%</a> mention you on comment: %comment%</div>'
+    follow: '<div class="notification" data-href="%url_user%"><a href="%url_user%">%user_from%</a> has followed you</div>'
+    promote: '<div class="notification" data-href="%url_ad%"><a href="%url_user%">%user_from%</a> promoted your ad</div>'
