--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -1,5 +1,5 @@
 search: Search
-stream: My Stream
+stream: Stream
 profile: Profile
 settings: Settings
 logout: Logout
@@ -168,7 +168,7 @@ landing:
             heading: <b>T</b>rending
             desc: Get your ads promoted to reach the Trending page
         stream:
-            heading: <b>M</b>y <b>S</b>tream
+            heading: <b>S</b>tream
             desc: Get activity updates from people you follow
         explore:
             heading: <b>E</b>xplore
