--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -161,3 +161,8 @@ landing:
         explore:
             heading: <b>E</b>xplore
             desc: Lihat iklan terakhir dari siapapun dimanapun
+
+#notification
+notif:
+    not_found: Tidak Ada Notifikasi Baru
+    show_all: Tampilkan Semua Notifikasi
