--- a/src/Adstacy/NotificationBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/NotificationBundle/Resources/translations/messages.en.yml
@@ -3,3 +3,5 @@ notification:
     mention: '<div class="notification" data-href="%url_ad%"><a href="%url_user%">%user_from%</a> mention you on comment: %comment%</div>'
     follow: '<div class="notification" data-href="%url_user%"><a href="%url_user%">%user_from%</a> has followed you</div>'
     promote: '<div class="notification" data-href="%url_ad%"><a href="%url_user%">%user_from%</a> promoted your ad</div>'
+    no_notification: No new notification
+    show_all: Show all notifications
