--- a/src/Adstacy/NotificationBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/NotificationBundle/Resources/translations/messages.id.yml
@@ -1,4 +1,5 @@
 notification:
+    title: Notification
     comment: '<div class="notification" data-href="%url_ad%"><a href="%url_user%">%user_from%</a> mengomentari iklan anda: "%comment%"</div>'
     mention: '<div class="notification" data-href="%url_ad%"><a href="%url_user%">%user_from%</a> mention anda di komentarnya: %comment%</div>'
     follow: '<div class="notification" data-href="%url_user%"><a href="%url_user%">%user_from%</a> follow anda</div>'
