--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -7,6 +7,7 @@ login: Login
 login.with: Login dengan
 register.with: Daftar dengan
 register: Daftar
+no_account_register: Belum ada akun? Daftar sekarang
 forgot_password: Lupa password?
 cancel: Batal
 close: Tutup
