--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -18,6 +18,7 @@ saving: Menyimpan...
 registering: Mendaftarkan...
 loggingin: Logging in...
 promoted_by: Juga dipromote oleh
+continue_to_explore: Lanjut ke Explore
 
 search_users: Users
 search_ads: Ads
