style register footer.

--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -27,7 +27,7 @@ search_ads: Ads
 about: Tentang
 terms: Ketentuan
 privacy: Kebijakan Privasi
-contact_us: Contact Us
+contact_us: Kontak Kami
 beta_info: Adstacy sedang dalam Beta. Kontak kami <a href="%url%">disini</a> jika Anda mempunyai kritik, saran ataupun pertanyaan
 
 ads:
