--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -46,6 +46,12 @@ ads:
     comment:
         success: Comment added
         fail: Comment failed
+        delete:
+            confirm_title: Comment Delete Confirmation
+            confirm_message: Are you sure you want to delete this comment?
+            button: DELETE!
+            success: Comment deleted
+            fail: Comment cannot be deleted
 
 user:
     no_followers:
